--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,4 +1,5 @@
 {
+    "/Assets/css/icons-bootstrap.css": "/Assets/css/icons-bootstrap.css",
     "/Assets/css/main.css": "/Assets/css/main.css",
     "/Assets/css/owl.carousel.min.css": "/Assets/css/owl.carousel.min.css",
     "/Assets/css/bootstrap.css": "/Assets/css/bootstrap.css",
